--- a/Serif.iatemplate/Contents/Resources/title.html
+++ b/Serif.iatemplate/Contents/Resources/title.html
@@ -8,9 +8,9 @@
 </head>
 <body class="title">
 <h1 data-title>&nbsp;</h1>
-<p>
-	Editor: <span data-author></span><br>
-	Date: <span data-date></span>
+<p class="title-meta">
+	<span data-date></span><br>
+	<span data-author></span>
 </p>
 </body>
 </html>
